--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,6 @@
   "trailingComma":"none",
   "tabWidth": 2,
   "semi": false,
-  "singleQuote": false,
+  "singleQuote": true,
   "endOfLine":"auto"
 }
