--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "react-scripts test --watchAll=false",
     "test:watch": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "npx eslint --ext js,jsx,ts,tsx src/** --fix"
+    "lint": "npx eslint --ext js,jsx,ts,tsx src/** --quiet --fix"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.5",
@@ -24,17 +24,8 @@
     "web-vitals": "^0.2.4"
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.2",
-    "eslint": "^7.12.1",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.1.0",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-react-hooks": "0.0.0-8e5adfbd7",
     "prettier": "^2.1.2",
     "typescript": "^4.0.5"
   },
@@ -55,5 +46,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "jest": {
+    "moduleNameMapper": {
+      ".+\\.(css|styl|less|sass|scss|png|jpg|ttf|woff|woff2)$": "<rootDir>/__mocks__/imageMock.ts"
+    }
   }
 }
