--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "web-vitals": "^0.2.4"
   },
   "devDependencies": {
+    "@testing-library/react-hooks": "^3.4.2",
     "babel-jest": "^26.6.2",
     "eslint-plugin-react-hooks": "0.0.0-8e5adfbd7",
     "prettier": "^2.1.2",
@@ -49,7 +50,7 @@
   },
   "jest": {
     "moduleNameMapper": {
-      ".+\\.(css|styl|less|sass|scss|png|jpg|ttf|woff|woff2)$": "<rootDir>/__mocks__/imageMock.ts"
+      ".+\\.(css|styl|less|sass|scss|png|jpg|ttf|woff|woff2)$": "<rootDir>/__mocks__/imageMock.js"
     }
   }
 }
